<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/j"
    android:theme="@style/TextInputLayout"
    tools:context=".ChefRegistration">

    <ScrollView
        android:layout_width="290dp"
        android:layout_height="457dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/scrollviewshapper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/registrationFormLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textColorLink="#0B0000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:passwordToggleContentDescription="@string/password"
                app:passwordToggleDrawable="@drawable/ic_baseline_visibility_off_24"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#070000"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CfmPwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:passwordToggleContentDescription="@string/password"
                app:passwordToggleDrawable="@drawable/ic_baseline_visibility_off_24"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#070000"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MobileNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileNo"

                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/mobile_number"

                    android:inputType="none|phone" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/HouseNo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/houseNo"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/house_street_no"
                    android:inputType="none|textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/area"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/area"
                    android:inputType="none|textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Pincode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pincode"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:hint="@string/pincode"
                    android:inputType="none|number" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="State"
                android:textSize="14dp">


            </TextView>

            <Spinner
                android:id="@+id/Statee"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:entries="@array/State"
                android:paddingLeft="5dp"
                >

            </Spinner>

            <TextView
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="City">


            </TextView>

            <Spinner
                android:id="@+id/Cityy"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingLeft="5dp">

            </Spinner>

            <Button
                android:id="@+id/signUp"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttonshaper"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="Register"
                android:textSize="15dp">

            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="------------------ OR ------------------"
                android:textSize="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Sign in with"
                android:textSize="20dp"
                android:textColor="#252525"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/emailS"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_email_24"
                    android:layout_marginLeft="20dp"
                    ></Button>

                <Button
                    android:id="@+id/gmailS"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/g32"
                    android:layout_gravity="center"
                    android:layout_marginLeft="45dp"
                    ></Button>


                <Button
                    android:id="@+id/PhoneS"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_phone_24"
                    android:layout_gravity="right"
                    android:layout_marginLeft="45dp"
                    ></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>